# webassembly-rs

./: .gitmodules  Cargo.toml  Makefile  README.md  build-spec-tests.sh  convert-all-spec-tests.sh  generate-test-wasm.py
example/simplest/: Cargo.toml  Makefile
example/simplest/src/: main.rs
src/: lib.rs  module.rs  spec_test_loader.rs
tests/fixtures/: custom_only.wasm  export_only.wasm  import_only.wasm
tests/fixtures/spec/: address.json  address64.0.wasm  address64.1.wasm  address64.2.wasm  address64.3.wasm  address64.json  align.json  binary-gc.0.wasm  binary-gc.json  binary-leb128.json  binary.126.wasm  binary.json  binary0.0.wasm  binary0.1.wasm  binary0.2.wasm  binary0.3.wasm  binary0.4.wasm  binary0.5.wasm  binary0.6.wasm  binary0.json  block.json  br.json  br_if.json  br_table.json  break-drop.json  bulk.json  bulk64.0.wasm  bulk64.1.wasm  bulk64.2.wasm  bulk64.3.wasm  bulk64.4.wasm  bulk64.json  call.json  call_indirect.json  call_indirect64.0.wasm  call_indirect64.json  comments.json  const.json  conversions.json  custom.json  (+619 more)
