[package]
name = "webassembly"
version = "0.9.2"
authors = ["Richard Anaya"]
edition = "2024"
description = "a library for working with WebAssembly"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://www.github.com/richardanaya/webassembly-rs"
exclude = ["tests/", "target/", "*.sh", "*.py", "build-spec-tests.sh", "convert-all-spec-tests.sh", "generate-test-wasm.py", "example/"]
