[package]
name = "webassembly"
version = "0.10.0"
authors = ["Richard Anaya"]
edition = "2024"
description = "Complete WebAssembly opcode constants and parser with 100% spec test coverage"
license = "MIT OR Apache-2.0"
categories = ["wasm", "no-std"]
repository = "https://www.github.com/richardanaya/webassembly-rs"
exclude = ["tests/", "target/", "*.sh", "*.py", "example/"]
